[gd_scene load_steps=4 format=3 uid="uid://budkxlx5wk2qv"]

[ext_resource type="Script" path="res://source/scripts/Enemy.gd" id="1_2dnhb"]
[ext_resource type="Texture2D" uid="uid://bsg1r6dpsndl3" path="res://assets/sprites/icon.svg" id="1_gltxf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_geqfw"]
size = Vector2(128, 126)

[node name="Enemy" type="CharacterBody2D" node_paths=PackedStringArray("nav_agent") groups=["Enemy"]]
motion_mode = 1
platform_on_leave = 2
platform_floor_layers = 4294967294
script = ExtResource("1_2dnhb")
follow_speed = 100.0
nav_agent = NodePath("NavigationAgent2D")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0.176471, 0.164706, 1)
texture = ExtResource("1_gltxf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_geqfw")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
max_speed = 400.0
debug_enabled = true

[node name="Range" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Range"]
polygon = PackedVector2Array(0, 0, 960, -256, 960, 256)

[connection signal="target_reached" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_target_reached"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="body_entered" from="Range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_range_body_exited"]
